--- a/package.json
+++ b/package.json
@@ -6,17 +6,41 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{vue,js,ts,jsx,tsx,json,css,scss,html,md}\"",
+    "lint": "eslint \"src/**/*.{vue,js,ts,jsx,tsx}\"",
+    "commit": "czg",
+    "prepare": "husky"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-git"
+    }
   },
   "dependencies": {
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/js": "^9.37.0",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "commitizen": "^4.3.1",
+    "cz-git": "^1.12.0",
+    "czg": "^1.12.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.5.1",
+    "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.1",
     "vite": "^7.1.7",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.0"
   }
 }
