feat: 初始化问卷管理系统前端框架
- 添加基础路由配置和页面布局组件
- 实现登录注册页面及表单验证
- 配置Element Plus UI库和主题样式
- 设置Vite构建配置和开发服务器代理
- 添加问卷管理相关页面和菜单组件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "baseUrl": ".",
-    "types": ["vite/client"],
+    "types": ["node"],
+    "lib": ["esnext"],
+     "baseUrl": "./src",
     "paths": {
-      "@/*": ["src/*"]
-    }
-  }
+      "@/*": ["./*"]
+    },
+  },
 }
