--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{vue,js,ts,jsx,tsx,json,css,scss,html,md}\"",
@@ -18,7 +18,11 @@
     }
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "axios": "^1.12.2",
+    "element-plus": "^2.11.4",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
@@ -36,9 +40,12 @@
     "eslint-plugin-vue": "^10.5.1",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
+    "less": "^4.4.2",
     "prettier": "^3.6.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.1",
+    "unplugin-auto-import": "^20.2.0",
+    "unplugin-vue-components": "^29.1.0",
     "vite": "^7.1.7",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.0"
