--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "element-plus": "^2.11.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
+    "vue-data-ui": "^3.7.7",
     "vue-router": "^4.6.2"
   },
   "devDependencies": {
